src/index.css
:root {
  --color-anchor: #5d70c7;
  --color-dont-exists: #414141;

  --dark-primary: #171717;
  --dark-secondary: #171717;
  --dark-font: #ececec;
  --dark-navbar: rgba(0, 0, 0, 0.5);

  --light-primary: #c4c4c4;
  --light-secondary: #e6e6e6;
  --light-font: #000;
  --light-navbar: rgba(255, 255, 255, 0.5);
}

* {
  /* outline: solid 1px red !important; */
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  font-size: 62.5%;
  font-family: "Roboto", sans-serif;
  scroll-behavior: smooth;
  background-color: #292929;
  color: var(--dark-font);
}

